--- a/ITZWebClientApp/Pages/ExtendedInfo/NAICM.razor
+++ b/ITZWebClientApp/Pages/ExtendedInfo/NAICM.razor
@@ -52,7 +52,7 @@
         Este proyecto tenía un gran reto desde el punto de vista técnico del software utilizado que era Revit, debido a que se necesitaban que el modelo tuviera los despieces adecuados y su correcta enumeración. A pesar de que las parillas geométricamente son ortogonales, el número de despieces que se generan al llegar a sus bordes se disparan provocando que se generen despieces varilla por varilla. El trabajo todavía incrementa de forma muy significativa si existiese algún cambio geométrico en la longitud de despiece o la ubicación de sus arranques, ya que provocaría que todas losas que estuviesen juntas sobre un mismo nivel estuvieran mal provocando que el proceso se vuelva a repetir prácticamente desde cero.
     </p>
 
-    <video class="showControlsOnHover" controls name="media">
+    <video class="showControlsOnHover" controls name="media" preload="metadata" muted>
         <source src="https://www.dropbox.com/s/0n8l6f129kwavpw/NAICM_PrimerosPlanos.mp4?raw=1" type="audio/mp4" /> />
     </video>
 
@@ -109,7 +109,7 @@
                     <b>Rotulación de Referencia de planos en cuadro de datos</b>
                     <div>
                         <video class="showControlsOnHover" name="media">
-                            <source src="https://www.dropbox.com/s/89eadflrz8yzlc7/NAICM_Demo.mp4?raw=1" type="audio/mp4" /> />
+                            <source src="https://www.dropbox.com/s/89eadflrz8yzlc7/NAICM_Demo.mp4?raw=1" type="audio/mp4" preload="metadata" muted /> />
                         </video>
                     </div>
                 </li>
@@ -122,7 +122,7 @@
                     Cortado de varilla con traslape incluido.
                     <div>
                         <video class="showControlsOnHover" name="media">
-                            <source src="https://www.dropbox.com/s/hrdu7alkvp45kid/NAICM_Apps%20ARTranslape.mp4?raw=1" type="audio/mp4" /> />
+                            <source src="https://www.dropbox.com/s/hrdu7alkvp45kid/NAICM_Apps%20ARTranslape.mp4?raw=1" type="audio/mp4" preload="metadata" muted /> />
                         </video>
                     </div>
                 </li>
@@ -130,7 +130,7 @@
                     Pre colocación de bastones.
                     <div>
                         <video class="showControlsOnHover" name="media">
-                            <source src="https://www.dropbox.com/s/cqb2ymv90mlhawq/NAICM_Apps%20Bastones.mp4?raw=1" type="audio/mp4" /> />
+                            <source src="https://www.dropbox.com/s/cqb2ymv90mlhawq/NAICM_Apps%20Bastones.mp4?raw=1" type="audio/mp4" preload="metadata" muted/> />
                         </video>
                     </div>
                 </li>
