--- a/ITZWebClientApp/wwwroot/css/forgeViewer.css
+++ b/ITZWebClientApp/wwwroot/css/forgeViewer.css
@@ -9,8 +9,8 @@
 
 .main {
     /*background-color: green;*/
-    height: calc(100vh - 60px);
-    overflow: auto;
+/*    height: calc(100vh - 60px);*/
+/*    overflow: auto;*/
     /*padding: 10px;*/
 }
 
